--- a/coaches/templates/coaches/detail.html
+++ b/coaches/templates/coaches/detail.html
@@ -41,7 +41,7 @@
     </nav>    
      <div class= "container">    
       <div class="jumbotron">
-      <h2>{{ coach.get_name }} {{ coach.get_lastname }}</h2><hr>
+      <h2>{{ coach.name }} {{ coach.surname }}</h2><hr>
      <h3></h3>
     <table class= "course_info">
         <tr><td>Дата Рождения</td><td>{{ coach.date_of_birth}}</td></tr>
