--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -40,72 +40,63 @@
             <a href="{% url 'contact' %}">Contacts</a>
           </li>
           <li>
-            <a href="{% url 'students:list_view' %}?course_id={{ course.id }}">Students</a>
+            <a href="{% url 'students:list_view' %}">Students</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <div class="container theme-showcase" role="main">
-      <div class="jumbotron">
-        <h2 class="course">{{ course.name }}</h2>
-        {{ course.description }}
-      </div>
-  </div>
 
   <div class="container">
-      <h2 class="course">Преподаватели</h2>
-      <div class="panel panel-default">
-        <div class="panel-heading">Учитель</div>
-          <div class="panel-body">
-            <a href="{% url 'coaches:detail' course.coach.id %}">{{ coach }}</a>
-            <p>{{ course.coach.description }}</p>
-          </div>
-        </div>
-      </div>
+      <h2 class="course">{{ coaches.user.get_full_name }}</h2>
+     <table class="table table-striped table-hover">
+                    <tbody>
+                        <tr>
+                            <td>дата рождения</td>
+                            <td>{{ coaches.date_of_birth }}</td>
+                        </tr>
+                        <tr>
+                            <td>адрес</td>
+                            <td>{{ coaches.address }}</td>
+                        </tr>
+                        <tr>
+                            <td>почта</td>
+                            <td>{{ coaches.user.email }}</td>
+                        </tr>
+                        <tr>
+                            <td>логин skype</td>
+                            <td>{{ coaches.skype }}</td>
+                        </tr>
+                        <tr>
+                            <td>телефон</td>
+                            <td>{{ coaches.phone }}</td>
+                        </tr>
+                        <tr>
+                            <td>курсы учитель</td>
+                            <td> {% for course in courses %}
+                            <a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a> студенты курса
+                            <a href="{% url 'students:list_view' %}?course_id={{ course.id }}">
+                            <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a><br>
+                        {% endfor %}</td>
+                        </tr>
+                        <tr>
+                            <td>курсы ассистент</td>
+                            <td>{% for assistant in assistants %}
+                            <a href="{% url 'courses:detail' assistant.id %}">{{ assistant.name }}</a> студенты курса
+                            <a href="{% url 'students:list_view' %}?course_id={{ assistant.id }}">
+                            <span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a><br>
+                        {% endfor %}</td>
+                        </tr>
+
+                    </tbody>
+                </table>
   </div>
 
-  <div class="container">
-      <div class="panel panel-default">
-        <div class="panel-heading">Ассистент</div>
-          <div class="panel-body">
-            <a href="{% url 'coaches:detail' course.assistant.id %}">{{ assistant }}</a>
-            <p>{{ course.assistant.description }}</p>
-          </div>
-        </div>
-      </div>
-  </div>
 
-    <div class="container">
-        <h2 class="course">План курса</h2>
-    </div>
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th class="panel-heading">#</th>
-                    <th class="panel-heading">Тема</th>
-                    <th class="panel-heading">Описание</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  {% for i in course.lesson_set.all %}
-                    <tr>
-                      <td>{{ i.order }}</td>
-                      <td>{{ i.subject }}</td>
-                      <td>{{ i.description}}</td>
-                    </tr>
-                  {% endfor %}
-                </tbody>
-              </table>
 
-      </div><!-- Site footer -->
-      <footer class="footer">
-        <p>&copy; PyBursa, 2015</p>
-      </footer>
-    </div>
 
   </div><!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js">
