--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -1,67 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{student.name}} {{student.surname}}</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>{{student.name}} {{student.surname}}</title>
 	{% load staticfiles %}
-
-    <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
-    <link href={%static 'css/style.css'%} rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
+  <link href={%static 'css/style.css'%} rel="stylesheet">
 	<script src={%static 'js/jquery.min.js'%}></script>
-    <script src={%static 'js/bootstrap.min.js'%}></script>
-  </head>
-  <body>
-
-	<nav class="navbar navbar-default">
-  
-      <ul class="nav navbar-nav">
-        <li><a href={% url 'index'%}>Main</a></li>
-        <li><a href={% url 'contact'%}>Contacts</a></li>
-		<li><a href={% url 'students:list_view'%}>Students</a></li>
-       
-      </ul>
-
-</nav>
-    <div>
-
-   <div class="jumbotron container">
-
- 
-
-  <h2 class = "style-thead3">{{student.name}} {{student.surname}}</h2>
-
-  <table class="table ">
-			<tbody>
-				<tr class = "style-thead3">
+  <script src={%static 'js/bootstrap.min.js'%}></script>
+</head>
+<body>
+	<nav class="navbar navbar-default"> 
+    <ul class="nav navbar-nav">
+      <li><a href={% url 'index'%}>Main</a></li>
+      <li><a href={% url 'contact'%}>Contacts</a></li>
+      <li><a href={% url 'students:list_view'%}>Students</a></li>
+    </ul>
+  </nav>
+  <div class="jumbotron container">
+    <h2>{{student.name}} {{student.surname}}</h2>
+    <table class="table ">
+      <tbody>
+				<tr>
 					<td>Birth Date</td>
 					<td>{{student.date_of_birth}}</td>
 				</tr>
-				<tr class = "style-thead3">
+				<tr>
 					<td>Address</td>
 					<td>{{student.address}}</td>
 				</tr>
-				<tr class = "style-thead3">
+				<tr>
 					<td>Email</td>
 					<td>{{student.email}}</td>
 				</tr>
-				<tr class = "style-thead3">
+				<tr>
 					<td>Skype</td>
 					<td>{{student.skype}}</td>
 				</tr>
-				<tr class = "style-thead3">
+				<tr>
 					<td>Phone</td>
 					<td>{{student.phone}}</td>
 				</tr>
-				<tr class = "style-thead3">
+				<tr>
 					<td>Courses</td>
 					<td>
 					{% for course in courses %}
@@ -69,14 +51,8 @@
 					{% endfor %}
 					</td>
 				</tr>
-			
-			
 			</tbody>
 		</table>
-
- 
-    
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    
-  </body>
+  </div>
+</body>
 </html>
