--- a/students/templates/students/list_view.html
+++ b/students/templates/students/list_view.html
@@ -1,79 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Students {{course.name}}</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Students {{course.name}}</title>
 	{% load staticfiles %}
-
-    <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
-    <link href={%static 'css/style.css'%} rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+  <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
+  <link href={%static 'css/style.css'%} rel="stylesheet">
 	<script src={%static 'js/jquery.min.js'%}></script>
-    <script src={%static 'js/bootstrap.min.js'%}></script>
-  </head>
-  <body>
-
+  <script src={%static 'js/bootstrap.min.js'%}></script>
+</head>
+<body>
 	<nav class="navbar navbar-default">
- 
-      <ul class="nav navbar-nav">
-        <li><a href={% url 'index'%}>Main</a></li>
-        <li><a href={% url 'contact'%}>Contacts</a></li>
-		<li><a href={% url 'students:list_view'%}>Students</a></li>
-  
-      </ul>
-      
-   
-</nav>
-    <div>
-
-   <div class="jumbotron container">
-
- 
-
-  <h2 class = "style-thead3">Students {{course.name}}</h2>
-
-  <table class="table ">
+    <ul class="nav navbar-nav">
+      <li><a href={% url 'index'%}>Main</a></li>
+      <li><a href={% url 'contact'%}>Contacts</a></li>
+      <li><a href={% url 'students:list_view'%}>Students</a></li>
+    </ul>   
+  </nav>
+  <div class="jumbotron container">
+    <h2>Students {{course.name}}</h2>
+    <table class="table">
 			<thead>
-				<tr class = "style-thead">
-				
+				<tr>
 					<th>#</th>
 					<th>Surnme Name</th>
 					<th>Address</th>
 					<th>Skype</th>
 					<th>Courses</th>
-				
 				</tr>
 			</thead>
 			<tbody>
 			{% for student in students %}
-			
-				<tr class = "style-thead3">
-					<td>{{student.id}} </td>
-					<td><a href={% url 'students:detail' student.id %}>{{student.surname}} {{student.name}}</a></td>
-					<td>{{student.address}}</td>
-					<td>{{student.skype}}</td>
-					<td>
-					{% for course in student.courses.all %}
-						<a href={% url 'courses:detail' course.id %}>{{course.name}} </a>
-					{% endfor %}
-					</td>
+				<tr>
+				<td>{{student.id}} </td>
+				<td><a href={% url 'students:detail' student.id %}>{{student.surname}} {{student.name}}</a></td>
+				<td>{{student.address}}</td>
+				<td>{{student.skype}}</td>
+				<td>
+				{% for course in student.courses.all %}
+					<a href={% url 'courses:detail' course.id %}>{{course.name}} </a>
+				{% endfor %}
+				</td>
 				</tr>
-			
 			{% endfor %}
-			</tbody>
+      </tbody>
 		</table>
-
- 
-    
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    
-  </body>
+  </div>
+</body>
 </html>
