--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,89 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Contacts</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Contacts</title>
 	{% load staticfiles %}
-
-    <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
-    <link href={%static 'css/style.css'%} rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="{%static 'js/jquery.min.js'%}"></script>
-    <script src="{%static 'js/bootstrap.min.js'%}"></script>
-  </head>
-  <body>
-    <div class="slash-div">
-    
-	<nav class="navbar navbar-default">
-  
-      <ul class="nav navbar-nav">
-        <li><a href={% url 'index'%}>Main</a></li>
-        <li><a href={% url 'contact'%}>Contacts</a></li>
-		<li><a href={% url 'students:list_view'%}>Students</a></li>
-        
-      </ul>
-      
-
-</nav>
-
-      
-
-      <div class="container" align="center"> 
-
-       <div class="media">
-          <div class="media-left">
-            <a>
-              <img class="img-circle img-style" src="../static/images/director.jpg">
-            </a>
-          </div>
-          <div class="media-body">
-            <h4 class="media-heading">Director</h4>
-            Name:   Petr Petrov<br>
-            Skype:  Director<br>
-            Email:  PetrovTheBest@google.com<br>
-            Phone:  +88005553535<br>
-          </div>
+  <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
+  <link href={%static 'css/style.css'%} rel="stylesheet">
+  <script src="{%static 'js/jquery.min.js'%}"></script>
+  <script src="{%static 'js/bootstrap.min.js'%}"></script>
+</head>
+<body>
+ 	<nav class="navbar navbar-default">
+    <ul class="nav navbar-nav">
+      <li><a href={% url 'index'%}>Main</a></li>
+      <li><a href={% url 'contact'%}>Contacts</a></li>
+      <li><a href={% url 'students:list_view'%}>Students</a></li> 
+    </ul>
+  </nav>
+  <div class="container" align="center"> 
+    <div class="media">
+      <div class="media-left">
+        <div>
+          <img class="img-circle img-style" src="../static/images/director.jpg">
         </div>
-        </div>
-            <div class="progress">
-              <div class=" progress-bar progress-bar-success ">
-            </div></div>
-        <div class="media">
-          <div class="media-left">
-            <a>
-              <img class="img-circle img-style" src="../static/images/founder.jpg">
-            </a>	
-          </div>
-          <div class="media-body">
-            <h4 class="media-heading">Founder</h4>
-            Name:   Ivan Ivanov<br>
-            Skype:  Founder<br>
-            Email:  IvanovTheBest@google.com<br>
-            Phone:  +99006664646<br>
-          </div>
-          <div class="media-left">
-            <a>
-              <img class="img-circle img-style" src="../static/images/manager.jpg">
-            </a>
-          </div>
-          <div class="media-body">
-            <h4 class="media-heading">Manager</h4>
-            Name:   Sasha Masha<br>
-            Skype:  Manager<br>
-            Email:  PupkinTheBest@google.com<br>
-            Phone:  +77004442424<br>
-          </div>
-        </div>
-    
-    
-  </body>
+      </div>
+      <div class="media-body">
+        <h4 class="media-heading">Director</h4>
+          Name:   Petr Petrov<br>
+          Skype:  Director<br>
+          Email:  PetrovTheBest@google.com<br>
+          Phone:  +88005553535<br>
+      </div>
+    </div>
+  </div>
+  <div class="media">
+    <div class="media-left">
+      <div>
+        <img class="img-circle img-style" src="../static/images/founder.jpg">
+      </div>	
+    </div>
+    <div class="media-body">
+      <h4 class="media-heading">Founder</h4>
+        Name:   Ivan Ivanov<br>
+        Skype:  Founder<br>
+        Email:  IvanovTheBest@google.com<br>
+        Phone:  +99006664646<br>
+    </div>
+    <div class="media-left">
+      <div>
+        <img class="img-circle img-style" src="../static/images/manager.jpg">
+      </div>
+    </div>
+    <div class="media-body">
+      <h4 class="media-heading">Manager</h4>
+        Name:   Sasha Masha<br>
+        Skype:  Manager<br>
+        Email:  PupkinTheBest@google.com<br>
+        Phone:  +77004442424<br>
+    </div>
+  </div>
+</body>
 </html>
