--- a/templates/index.html
+++ b/templates/index.html
@@ -1,77 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Main</title>
-	{% load staticfiles %}
-
-    <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
-    <link href={%static 'css/style.css'%} rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-	<script src={%static 'js/jquery.min.js'%}></script>
-    <script src={%static 'js/bootstrap.min.js'%}></script>
-  </head>
-  <body>
-
-	<nav class="navbar navbar-default">
-  
-    <!-- Brand and toggle get grouped for better mobile display -->
-    
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    
-      <ul class="nav navbar-nav">
-        <li><a href={% url 'index'%}>Main</a></li>
-        <li><a href={% url 'contact'%}>Contacts</a></li>
-		<li><a href={% url 'students:list_view'%}>Students</a></li>
-        
-      </ul>
-      
- 
-</nav>
-    <div>
-
-   <div class="jumbotron container">
-
- 
-
-  <h2 class = "style-thead3">Description  of ItBursa courses</h2>
-  <p class = "style-thead2">Some description of ItBursa courses</p>
-  <p><a class="btn btn-primary btn-lg"  role="button">Learn more</a></p>
-</div>
-<div class="jumbotron container">
- <h2 class = "style-thead3">Description  of ItBursa courses</h2>
-  <table class="table ">
-			<thead>
-				<tr class = "style-thead">
-				
-					<th>Course</th>
-					<th>Description</th>
-				
-				</tr>
-			</thead>
-			<tbody>
-			{% for course in courses %}
-				<tr class = "style-thead3">
-					<td><a href={% url 'courses:detail' course.id %}>{{course.name}}</a></td>
-					<td>{{course.short_description}}</td>
-					
-				</tr>
-			{% endfor %}
-			</tbody>
-		</table>
-
- </div>
-    
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Main</title>
+  {% load staticfiles %}
+  <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
+  <link href={%static 'css/style.css'%} rel="stylesheet">
+  <script src={%static 'js/jquery.min.js'%}></script>
+  <script src={%static 'js/bootstrap.min.js'%}></script>
+</head>
+<body>
+  <nav class="navbar navbar-default"> 
+    <ul class="nav navbar-nav">
+      <li><a href={% url 'index'%}>Main</a></li>
+      <li><a href={% url 'contact'%}>Contacts</a></li>
+		  <li><a href={% url 'students:list_view'%}>Students</a></li>
+    </ul>
+  </nav>
+  <div class="jumbotron container">
+    <h2>Description  of ItBursa courses</h2>
+    <p>Some description of ItBursa courses</p>
+  </div>
+  <div class="jumbotron container">
+    <h2>Description  of ItBursa courses</h2>
+    <table class="table ">
+      <thead>
+        <tr>
+          <th>Course</th>
+          <th>Description</th>
+        </tr>
+      </thead>
+      <tbody>
+      {% for course in courses %}
+        <tr>
+          <td><a href={% url 'courses:detail' course.id %}>{{course.name}}</a></td>
+          <td>{{course.short_description}}</td>
+        </tr>
+      {% endfor %}
+      </tbody>
+    </table>
+  </div>
+</body>
 </html>
