--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -1,156 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Student</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Student</title>
 	{% load staticfiles %}
-
-    <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
-    <link href={%static 'css/style.css'%} rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src={%static 'js/jquery.min.js'%}></script>
-    <script src={%static 'js/bootstrap.min.js'%}></script>
-  </head>
-  <body>
+  <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
+  <link href={%static 'css/style.css'%} rel="stylesheet">
+  <script src={%static 'js/jquery.min.js'%}></script>
+  <script src={%static 'js/bootstrap.min.js'%}></script>
+</head>
+<body>
   <nav class="navbar navbar-default">
- 
-      <ul class="nav navbar-nav">
-        <li><a href={% url 'index'%}>Main</a></li>
-        <li> <a href={% url 'contact'%}>Contacts</a></li>
-		<li><a href={% url 'students:list_view' %}>Students</a></li>
-     
-      </ul>
-      
-   
-</nav>
-    <div class="page-header">
+    <ul class="nav navbar-nav">
+      <li><a href={% url 'index'%}>Main</a></li>
+      <li> <a href={% url 'contact'%}>Contacts</a></li>
+      <li><a href={% url 'students:list_view' %}>Students</a></li>
+    </ul>
+  </nav>
+  <div class="page-header">
 		<h1>Surname1 Name1</h1>
 	</div>
 	<div class="panel panel-default container">
-		<!-- Default panel contents -->
-		<div class="panel-body style-thead3"	>
-		<h3>Student card</h3>
+    <div class="panel-body">
+      <h3>Student card</h3>
 		</div>
 		<table class="table">
-		<tbody class = "style-thead2">
+      <tbody>
 				<tr>
 					<td>Surname</td>
 					<td>Surname1</td>
-				
 				</tr>
 				<tr>
 					<td>Name</td>
 					<td>Name1</td>
-				
 				</tr>
 				<tr>
 					<td>Patronymic</td>
 					<td>Patronymic1</td>
-				
 				</tr>
 				<tr>
 					<td>Rating</td>
 					<td>20</td>
-				
 				</tr>
 				<tr>
 					<td>Average Grade</td>
 					<td>99.9</td>
-				
 				</tr>
 				<tr>
 					<td>Package</td>
 					<td>Standart</td>
-				
 				</tr>
 				<tr>
 					<td>Birth Date</td>
 					<td>29.02.1900</td>
-				
 				</tr>
 				<tr>
 					<td>Address</td>
 					<td>Address1</td>
-				
 				</tr>
 				<tr>
 					<td>Post</td>
 					<td>Post1</td>
-				
 				</tr>
 				<tr>
 					<td>Skype</td>
 					<td>Skype1</td>
-				
 				</tr>
 				<tr>
 					<td>E-mail</td>
 					<td>E-mail1</td>
-				
 				</tr>
-		</tbody>
-		
+      </tbody>
 		</table>
 	</div>
 	<div class="panel panel-default container">
-		<div class="panel-body style-thead3"	>
+		<div class="panel-body"	>
 			<h3>Perfomance</h3>
 		</div>
-	<!-- Default panel contents -->
-		<!-- Table -->
-		<table class="table ">
-			<thead>
-				<tr class = "style-thead">
-				
-					<th>Course</td>
-					<th>Week</td>
-					<th>Control type</td>
-					<th>Grade</td>
-				</tr>
-			</thead>
-			<tbody class = "style-thead2" >
-				<tr >
-					<td>Py 101 intro to Python</td>
-					<td>Week 1</td>
-					<td>Tests</td>
-					<td>99%</td>	
-				</tr>
-				<tr>
-					<td> </td>
-					<td> </td>
-					<td>Problem Task 1</td>
-					<td>99%</td>	
-				</tr>
-				<tr>
-					<td> </td>
-					<td> </td>
-					<td>Problem Task 2</td>
-					<td>99%</td>	
-				</tr>
-				<tr>
-					<td> </td>
-					<td>Week 2</td>
-					<td>Tests</td>
-					<td>99%</td>	
-				</tr>
-				<tr>
-					<td> </td>
-					<td> </td>
-					<td>Problem Task 1</td>
-					<td>99%</td>
-				</tr>
-			</tbody>
-		</table>
-	</div>
-   
-  </body>
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Course</td>
+          <th>Week</td>
+          <th>Control type</td>
+          <th>Grade</td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr >
+          <td>Py 101 intro to Python</td>
+          <td>Week 1</td>
+          <td>Tests</td>
+          <td>99%</td>	
+        </tr>
+        <tr>
+          <td> </td>
+          <td> </td>
+          <td>Problem Task 1</td>
+          <td>99%</td>	
+        </tr>
+        <tr>
+          <td> </td>
+          <td> </td>
+          <td>Problem Task 2</td>
+          <td>99%</td>	
+        </tr>
+        <tr>
+          <td> </td>
+          <td>Week 2</td>
+          <td>Tests</td>
+          <td>99%</td>	
+        </tr>
+        <tr>
+          <td> </td>
+          <td> </td>
+          <td>Problem Task 1</td>
+          <td>99%</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</body>
 </html>
