--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -1,66 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>List</title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>List</title>
 	{% load staticfiles %}
-
-    <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
-    <link href={%static 'css/style.css'%} rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-	  
-    <![endif]-->
-	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src={%static 'js/jquery.min.js'%}></script>
-    <script src={%static 'js/bootstrap.min.js'%}></script>
-  </head>
-  <body>
+  <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
+  <link href={%static 'css/style.css'%} rel="stylesheet">
+  <script src={%static 'js/jquery.min.js'%}></script>
+  <script src={%static 'js/bootstrap.min.js'%}></script>
+</head>
+<body>
 	<nav class="navbar navbar-default">
-  
-      <ul class="nav navbar-nav">
-        <li><a href={% url 'index'%}>Main</a></li>
-        <li><a href={% url 'contact'%}>Contacts</a></li>
-		<li><a href={% url 'students:list_view'%}>Students</a></li>
-        
-      </ul>
-    
-   
-</nav>
-    <div class="page-header container media">
-		<div class="media-heading"><h1>Students of course PyBursa</h1></div>
-		<h3 class = "style-thead2">List of students november 2015</h3>
-	</div>
+    <ul class="nav navbar-nav">
+      <li><a href={% url 'index'%}>Main</a></li>
+      <li><a href={% url 'contact'%}>Contacts</a></li>
+      <li><a href={% url 'students:list_view'%}>Students</a></li>
+    </ul>   
+  </nav>
+  <div class="page-header container media">
+    <div class="media-heading"><h1>Students of course PyBursa</h1></div>
+      <h3>List of students november 2015</h3>
+  </div>
 	<div class="panel panel-default container">
-	<!-- Default panel contents -->
-		<!-- Table -->
 		<table class="table ">
 			<thead>
-				<tr class = "style-thead">
-				
+				<tr>
 					<th>No</th>
 					<th>Surname</th>
 					<th>Name</th>
 					<th>Address</th>
 					<th>Skype</th>
-				
 				</tr>
 			</thead>
 			<tbody>
-				<tr class = "style-thead3">
+				<tr>
 					<td><a href={% url 'student_detail'%}>1</a></td>
 					<td><a href={% url 'student_detail'%}>Surname1</a></td>
 					<td><a href={% url 'student_detail'%}>Name1</a></td>
 					<td><a href={% url 'student_detail'%}>Address1</a></td>
 					<td><a href={% url 'student_detail'%}>Skype1</a></td>
 				</tr>
-				<tr class = "style-thead">
+				<tr>
 					<td>2</td>
 					<td>Surname2</td>
 					<td>Name2</td>
@@ -90,8 +72,6 @@
 				</tr>
 			</tbody>
 		</table>
-		</div>
-	
-    
-  </body>
+	</div>
+</body>
 </html>
