--- a/coaches/templates/coaches/detail.html
+++ b/coaches/templates/coaches/detail.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Teacher {{teacher.Surname}} {{teacher.Name}}</title>
+  <title>Teacher {{teacher.last_name}} {{teacher.first_name}}</title>
 	{% load staticfiles %}
   <link href={%static 'css/bootstrap.css'%} rel="stylesheet">
   <link href={%static 'css/style.css'%} rel="stylesheet">
@@ -20,7 +20,7 @@
     </ul>
   </nav>
   <div class="jumbotron container">
-    <h2>{{teacher.Name}} {{teacher.Surname}}</h2>
+    <h2>{{teacher.first_name}} {{teacher.last_name}}</h2>
     <table class="table">
 			<tbody>
 				<tr>
@@ -33,7 +33,7 @@
 				</tr>
 				<tr>
 					<td>Email</td>
-					<td>{{teacher.Email}}</td>
+					<td>{{teacher.email}}</td>
 				</tr>
 				<tr>
 					<td>Skype</td>
@@ -52,9 +52,9 @@
 					</td>
 				</tr>
 				<tr>
-					<td>Courses as Assistent</td>
+					<td>Courses as Assistant</td>
 					<td>
-					{% for course in course_assistent %}
+					{% for course in course_assistant %}
 						<a href={% url 'courses:detail' course.id %}>{{course.name}} <a href={% url 'students:list_view'%}?course_id={{course.id}}><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span></a></a>
 					{% endfor %}
 					</td>
