--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -55,7 +55,7 @@
                 </div>
                 <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                   <div class="panel-body">
-                    <table class="table table-bordered">
+                    <table class>
                           <th>дата рождения</th>
                           <td>{{ teacher.date_of_birth }}</td>
                         </tr>
