--- a/templates/contact.html
+++ b/templates/contact.html
@@ -20,16 +20,12 @@
     <hr class="topping_contacts"></hr>
     	<nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
-          <div class="navbar-header">
-            <button type="button"  data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-  expanded="false">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <li id="button"><a href="{% url 'index' %}">Главная</a></li>
-            <li id="button"><a href="{% url 'contact' %}">Контакты</a></li>
-        		<li id="button"><a href="{% url 'students:list_view' %}">Студенты</a></li>
+        	<div class="navbar-header">
+        		<ul class="navbar-brand">
+        		  <a href="{% url 'index' %}">Главная</a>
+        		  <a href="{% url 'contact' %}">Контакты</a>
+        		  <a href="{% url 'students:list_view' %}">Студенты</a>
+            </ul>
       		</div>
         	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         	</div>
