--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PythonBursa</title>
+    <title>IT Course</title>
     {% load staticfiles %}
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
 +   <link href="{% static 'css/style.css' %}" rel="stylesheet">
@@ -15,11 +15,11 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
           <div class="navbar-header">
-            <button type="button"  data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            </button>
-            <li id="button"><a href="{% url 'index' %}">Главная</a></li>
-            <li id="button"><a href="{% url 'contact' %}">Контакты</a></li>
-            <li id="button"><a href="{% url 'students:list_view' %}?course_id={{courses.id}}">Студенты</a></li>
+            <ul class="navbar-brand">
+            	<a href="{% url 'index' %}">Главная</a>
+            	<a href="{% url 'contact' %}">Контакты</a>
+            	<a href="{% url 'students:list_view' %}?course_id={{courses.id}}">Студенты</a>
+            </ul>
           </div>
          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
        </div>
@@ -35,44 +35,24 @@
           </div>
         </div>
       </div>
-<div class="page-header">
-                               
-    	<h1 class="student-head2">Преподаватели</h1>
-        <p class="below-header2">ooniversity</p>                         
-  	</div>
       <div class="study_table">
 		  <div class="panel panel-default">
   	    <div class="panel-heading"><h2 class="course_program" >Учитель</h2></div>
-          <table class="table table-hover">
-            <tr><td><h3>
-            <a href="{% url 'coaches:detail' courses.coach.id %}">{{ courses.coach.last_name }} {{ courses.coach.first_name }}</a></br>
-					              
-            </h3></td></tr>
-            <tr><td><h3>
-                        {{ courses.coach.coach.description }}
-            </h3></td></tr>
-            
-  
-          </table>
+		      <table class="table table-hover">           
+            <tr><td><h3><a href="{% url 'coaches:detail' courses.coach.id %}">{{ courses.coach.get_full_name }} </a></h3></td></tr>
+            <tr><td><h3>{{ courses.coach.description }}</h3></td></tr> 
+			    </table>
         </div>
       </div>
-<div class="study_table">
+      <div class="study_table">
 		  <div class="panel panel-default">
   	    <div class="panel-heading"><h2 class="course_program" >Ассистент</h2></div>
-          <table class="table table-hover">
-            <tr><td><h3>
-            <a href="{% url 'coaches:detail' courses.assistant.id %}">{{ courses.assistant.last_name }} {{ courses.assistant.first_name }}</a></br>
-					              
-            </h3></td></tr>
-            <tr><td><h3>
-                        {{ courses.assistant.coach.description }}
-            </h3></td></tr>
-            
-  
-          </table>
+		      <table class="table table-hover">           
+            <tr><td><h3><a href="{% url 'coaches:detail' courses.assistant.id %}">{{ courses.assistant.get_full_name }} </a></h3></td></tr>
+            <tr><td><h3>{{ courses.assistant.description }}</h3></td></tr> 
+			    </table>
         </div>
       </div>
-      
       <div class="course_id" >
         <div class="panel panel-default">
           <div class="panel-heading"><h2 class="py_program"></h2></div>
