--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -40,7 +40,7 @@
       </div>
     </nav>
     <div class="container">
-      <h1> {{teacher.surname}} {{teacher.name}}</h1>
+      <h1> {{teacher.full_name}}</h1>
       <div class="thumbnail">
         <div class="row">
           <div class="col-md-12 lead">
