--- a/templates/courses/detail.html
+++ b/templates/courses/detail.html
@@ -37,7 +37,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href=" {% url 'courses:list_view' %} ">Main</a></li>
+        <li><a href=" {% url 'courses:index' %} ">Main</a></li>
         <li><a href=" {% url 'contact' %}" >Contacts</a></li>
         <li><a href=" {% url 'students:list_view' %}?course_id={{course_object.id}} " >Students</a></li>
       </ul>
@@ -52,6 +52,24 @@
     <div class="jumbotron">
       <h1 class="description">{{ course_object.name }} </h1>
       <h2 class="course">{{ course_object.description }}</h2>
+      <h3>Преподаватели</h3>
+
+      <div class="panel panel-default">
+      <div class="panel-heading">Учитель</div>
+      <div class="panel-body">
+        <p><b><a href="{% url 'coaches:detail' pk=course_object.coach.id %}">{{ course_object.coach.user.first_name }} {{ course_object.coach.user.last_name }}</a></b></p>
+        <p>{{ course_object.coach.description }}</p>
+
+      </div>
+      </div>
+
+      <div class="panel panel-default">
+      <div class="panel-heading">Ассистент</div>
+      <div class="panel-body">
+        Panel content
+      </div>
+      </div>
+
       <h3 class="program">План курса</h3>
       <table class="table">
       <thead>
