--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -68,7 +68,7 @@
                           <td>{{ coach.email }}</td>
                         </tr>
                         <tr>
-                          <th>Skype</th>
+                          <th>логин skype</th>
                           <td>{{ coach.skype }}</td>
                         </tr>
                         <tr>
