Email field fixed

--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -57,7 +57,7 @@
         </tr>
         <tr>
           <th scope="row">email</th>
-          <td>{{ coach_object.email }}</td>
+          <td>{{ coach_object.user.email }}</td>
         </tr>
         <tr>
           <th scope="row">телефон</th>
