--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,3 +33,7 @@ footer .footer-copyright {
     color: rgba(255, 255, 255, 0.8);
     background-color: rgba(51, 51, 51, 0.08);
 }
+
+.coaches img {
+    margin-bottom: -80px;
+}
