Date format in date_of_birth corrected

--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -53,7 +53,7 @@
       <tbody>
         <tr>
           <th scope="row">дата рождения</th>
-          <td>{{ coach_object.date_of_birth }}</td>
+          <td>{{ coach_object.date_of_birth|date:"M. j, Y" }}</td>
         </tr>
         <tr>
           <th scope="row">email</th>
