--- a/templates/coaches/detail.html
+++ b/templates/coaches/detail.html
@@ -65,13 +65,13 @@
                         {% if course_coach %}
                         <tr>
                           <th>курсы учитель</th>
-                          <td>{% for course in coach.coach_courses.all %}<a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a> студенты курса <a href={% url 'students:list_view'%}?course_id={{course.id}}><span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span></a><br>{% endfor %}</td>
+                          <td>{% for course in coach.coach_courses.all %}<a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a> студенты курса <a href="{% url 'students:list_view'%}?course_id={{course.id}}"><span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span></a><br>{% endfor %}</td>
                         </tr>
                         {% endif %}
                         {% if course_assistant %}
                         <tr>
                           <th>курсы ассистент</th>
-                          <td>{% for course in coach.assistant_courses.all %}<a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a> студенты курса <a href={% url 'students:list_view'%}?course_id={{course.id}}><span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span></a><br>{% endfor %}</td>
+                          <td>{% for course in coach.assistant_courses.all %}<a href="{% url 'courses:detail' course.id %}">{{ course.name }}</a> студенты курса <a href="{% url 'students:list_view'%}?course_id={{course.id}}"><span class="glyphicon glyphicon-asterisk" aria-hidden="true"></span></a><br>{% endfor %}</td>
                         </tr>
                         {% endif %}
                     </table>
