--- a/courses/templates/courses/index.html
+++ b/courses/templates/courses/index.html
@@ -41,6 +41,8 @@
             varius."
         </p>
 
+        <!--Courses list-->
+
         <h3>List of courses</h3>
          <table class="table opct-img">
             <tr class="dark">
