--- a/students/templates/students/detail.html
+++ b/students/templates/students/detail.html
@@ -30,7 +30,7 @@
             <div class="jumbotron ">
                    <h2 class="opct-text">{{ student.name }} {{ student.surname }}</h2>
 
-                    <img src="../../static/images/student.png" alt="..."  class="opct-img" >
+                    <img src="{% static 'images/student.png' %}" alt="..."  class="opct-img" >
                 <br/>
                 <br/>
                 <h3>Personal information</h3>
